Index principal agregado

--- a/weatherApp/index.html
+++ b/weatherApp/index.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <a href="../index.html">Volver</a>
     <div class="container">
         <h1>Clima</h1>
             <input class="buscar" type="text">
