Correcion en animes

--- a/animesAp/index.html
+++ b/animesAp/index.html
@@ -17,12 +17,12 @@
                 <option value="tv"></option>
                 <option value="movie">Movies</option>
                 <option value="ova">Ovas</option>
-                <option value="special">Espcial</option>
+                <option value="special">Especial</option>
                 <option value="ona">Onas</option>
                 <option value="music">Music</option>
                 <option value="cm">CM</option>
                 <option value="pv">PV</option>
-                <option value="tv_special">Especial de Tv</option>
+                <option value="tv_special">Especial de TV</option>
             </select>
         </div>
         <div class="buttons"></div>
